fix: detail of dice

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon -w src --exec \"babel-node src\"",
     "build": "babel src -s -D -d dist",
     "start": "node dist",
-    "deploy": "pm2 dist start",
+    "deploy": "pm2 start dist",
     "lint": "eslint src"
   },
   "dependencies": {
